<resources>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="registerlong">Don\'t have an account? Register!</string>
    <string name="loginlong">Already have an account? Login!</string>

    <string name="password">Password</string>
    <string name="mail">E-mail</string>
    <string name="name">First name</string>
    <string name="app_name">Swovie</string>
    <string name="swipe">Swipe</string>
    <string name="match">Group</string>
    <string name="group">Group</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="movie">Movie</string>
    <string name="title">Title</string>
    <string name="viewmatches">Matches</string>
    <string name="filter">Filters</string>

    <!-- MovieFragment -->
    <string name="like">Like</string>
    <string name="superlike">Super like</string>
    <string name="nottoday">Not Today</string>
    <string name="never">Never</string>
    <string name="runtime">Runtime: </string>
    <string name="alreadywatched">Already watched</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="longtext">Pirates of the Caribbean: The curse of the black pearl</string>


    <!-- GroupFragment -->
    <string name="titlegroup">Create or Join a Group</string>
    <string name="creategroup">Create Group</string>
    <string name="joingroup">Join Group</string>
    <string name="entergroupcode">Enter group code</string>
    <string name="groupcode">Group code: </string>
    <string name="nomatches">No matches yet</string>
    <string name="groupnomembers">Give the group code to your friends so they can join the group.</string>
    <string name="grouphelp">Join a group by entering the 4-character group code</string>
    <string name="grouphelp2">Or create a new group.</string>
    <string name="viewmembers">View Members</string>
    <string name="viewswipes">View swipes</string>
    <string name="matchpercentage">% match</string>
    <string name="leavegroup">Leave Group</string>
    <string name="alertleavegroup">Are you sure you want to leave the group?</string>


    <!-- AccountFragment -->
    <string name="TMDbCredits">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="logout">Log out</string>
    <string name="resetpassword">Reset password</string>
    <string name="resetswipes">Reset all swipes</string>

    <!-- Alert Dialogs -->

    <string name="alertpassword">Are you sure you wish to reset password?</string>
    <string name="alertswipes">Are you sure you wish to reset swipes?</string>
    <string name="alertlogout">Are you sure you wish to log out?</string>
    <string name="alertyes">Yes</string>
    <string name="alertcancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="close">Close</string>


    <!-- Genre filters -->
    <string name="genreoptions">Genre options</string>
    <string name="genre1">Action</string>
    <string name="genre2">Adventure</string>
    <string name="genre3">Animation</string>
    <string name="genre4">Comedy</string>
    <string name="genre5">Crime</string>
    <string name="genre6">Documentary</string>
    <string name="genre7">Drama</string>
    <string name="genre8">Family</string>
    <string name="genre9">Fantasy</string>
    <string name="genre10">History</string>
    <string name="genre11">Horror</string>
    <string name="genre12">Music</string>
    <string name="genre13">Romance</string>
    <string name="genre14">Science Fiction</string>
    <string name="genre15">Thriller</string>
    <string name="genre16">TV Movie</string>
    <string name="genre17">War</string>
    <string name="genre18">Western</string>
    <string name="noSwipeString">You are not in a group. Join or create a group to start swiping!</string>
    <string name="joinOrCreateGroup">Join/Create Group</string>
    <string name="no">No</string>
    <string name="surexit">Are you sure you wish to exit Swovie?</string>
</resources>