<com.google.android.material.chip.ChipGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chip_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:singleSelection="false">

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_1"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/genre1"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_2"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/genre2"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_3"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/genre3"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_4"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/genre4"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_5"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/genre5"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_6"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/genre6"/>
    <com.google.android.material.chip.Chip
        android:id="@+id/chip_7"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/genre7"/>
    <com.google.android.material.chip.Chip
        android:id="@+id/chip_8"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/genre8"/>
    <com.google.android.material.chip.Chip
        android:id="@+id/chip_9"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/genre9"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_10"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/genre10"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_11"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/genre11"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_12"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/genre12"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_13"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/genre13"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_14"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/genre14"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_15"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/genre15"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_16"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/genre16"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_17"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/genre17"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_18"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/genre18"/>

    </com.google.android.material.chip.ChipGroup>
