<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MovieFragment"
    android:id="@+id/fragment_movie"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_filter"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/filter"
            android:textColor="@color/secondary"/>

        <Button
            android:id="@+id/button_matches"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/viewmatches"
            android:enabled="false"
            android:textColor="@color/secondary"
            tools:visibility="visible" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_poster"
        android:layout_width="match_parent"
        android:layout_height="384dp"
        android:layout_margin="5dp"
        android:elevation="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_top">

        <ImageView
            android:id="@+id/imageView_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/movie"
            app:layout_constraintCircleRadius="4dp"
            tools:src="@drawable/ic_movie" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/hello_blank_fragment"
        android:textAlignment="textStart"
        android:textColor="@color/primary"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_poster" />

    <ImageButton
        android:id="@+id/imageButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="64dp"
        android:layout_height="32dp"
        android:layout_weight="1"
        android:contentDescription="@string/movie"
        android:src="@drawable/ic_baseline_info_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_poster" />

    <TextView
        android:id="@+id/textView_genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_weight="1"
        android:text="@string/movie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title" />

    <TextView
        android:id="@+id/textView_runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/runtime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_genres" />

    <CheckBox
        android:id="@+id/checkBox_already_watched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:text="@string/alreadywatched"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/imageView_never"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/never"
            android:src="@drawable/ic_block" />

        <ImageButton
            android:id="@+id/imageView_not_today"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/nottoday"
            android:src="@drawable/ic_sync" />

        <ImageButton
            android:id="@+id/imageView_like"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/like"
            android:src="@drawable/ic_favorite" />

        <ImageButton
            android:id="@+id/imageView_super_like"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/superlike"
            android:src="@drawable/ic_star" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>